chamber/css/small.css
@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap');

/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS. */
html {
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
  }
  
  /* Apply a natural box layout model to all elements */
  * {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
  }
  
  /* ---------- BODY ---------- */
  body {
    font-size: 16px;
    font-family: 'Dongle', sans-serif;
  }
  
  /* ---------- HEADER ---------- */
  header {
    background-color: #545775;
    color: #fff;
    padding-top: 0.5rem;
  }
  
  header img {
    float: left;
    width: 70px;
    margin: 0.5rem 2vw;
  }
  
  header h1 {
    margin: 0.5em 0 0 0;
    font-size: 1.5rem;
  }
  
  header h2 {
    margin: 1em 0;
    font-weight: normal;
    font-size: 0.9rem;
  }
  
  header h2.date {
    margin-top: 20px;
  }
  
  header h2.date {
    color: #90B494;
    text-align: center;
    font-size: 1.3rem;
  }

  .banner {
    padding-left: 5px;
  }

  header div.showme {
    display: block;
  }

  header div.hideme {
    display: none;
  }
  
  /* ---------- NAVIGATION ---------- */
  nav {
    background-color: #BFC8AD;
  }
  
  nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
  }
  
  nav button {
    margin: 0.5rem 2vw;
    background-color: transparent;
    border: none;
    font-size: 2rem;
    color: #fff;
  }
  
  nav ul li a {
    display: block;
    font-weight: bold;
    padding: 0.8rem 2vw;
    text-decoration: none;
    color: #fff;
    text-align: center;
  }
  
  nav ul li.active {
    background-color: #DBCFB0;
  }
  
  nav ul li a:hover {
    background-color: #DBCFB0;
    color: #0b010c;
  }
  
  /* Responsive Nav */
  nav ul {
    display: none;
  }
  nav ul.open {
    display: block;
  }
  
  #menuButton span:nth-child(1) {
    display: block;
  }
  #menuButton span:nth-child(2) {
    display: none;
  }
  
  #menuButton.open span:nth-child(1) {
    display: none;
  }
  #menuButton.open span:nth-child(2) {
    display: block;
  }
  
  /* ---------- MAIN ---------- */
  main {
    padding: 0.5rem 2vw;
  }
  
  main section {
    border: 2px solid #0b010c;
    margin-bottom: 20px;
  }
  
  main section.colored {
    background-color: #545775;
    color: #fff;
  }
  
  main section.colored h2 {
    color: #90B494;
  }
  
  main section h2,
  main section p {
    padding: 0 0.8rem;
  }
  
  main section p {
    line-height: 1.3rem;
  }
  
  main section.home-join,
  main section.home-spotlight-3 {
    display: none;
  }

  .hero {
    background-image: url('../images/jubilifehero.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    width: 100%;
  }
  .hero-content {
    background-color: rgba(255, 255, 255, 0.65);
    padding: 1.5rem;
    text-align: center;
    
    margin: 2rem 10% auto 10%;
    
  }
  .hero-content p {
    font-size: 1.1rem;
  }
  .btn {
    background-color: #0a4f77da;
    color: #ffffff;
    padding: 0.5rem;
    border-radius: 4px 4px 4px 4px;
  }

  /* ---------- DISCOVER ---------- */
  .discover-grid img:hover {
    box-shadow: 0 0 50px #333; cursor: pointer;
  }

  .discover-grid img {
    max-width: 100%;
    padding: 0.5rem;
  }

  .discover-description p {
    font-size: 1.1rem;
  }
  
  /* ---------- FOOTER ---------- */
  footer {
    background-color: #545775;
    color: #fff;
    padding: 1.5rem 2vw;
    border-top: 20px solid #BFC8AD;
    text-align: center;
  }
  
  footer img {
    width: 100px;
  }

